Update to website.

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,9 @@
 
             <p>This service creates a permalink for a Hangout - a single URL with a Join Hangout button that take anyone who clicks it to the same hangout. As an added bonus, you can see whether other people are already in the hangout before you join it.</p>
         </article>
-        <footer>
-            <p>This service is part of the Unhangout Project from the MIT Media Lab and MacArthur Foundation. Source available at <a href="http://github.com/drewww/unhangout">Github.</a></p>
+       <footer>
+            <h1><center>© October 2013 - Present by Morgan Conrad. All rights reserved.</center>
+            </h1>
         </footer>
     </body>
 </html>
