--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
             </nav>
         </header>
         <article>
-            <h1>About This Website</h1>
+            <h1>Welcome!</h1>
             <h2>Make Hangouts into easily-reusable online meeting rooms.</h2>
             <p>Google Hangouts are great, but it can be tricky to figure out how to create a hangout and send a link around to people. There are some work arounds (this trick with Google Calendar is particularly useful) but at the end of the day, Hangout just doesn't behave like a first class citizen of the web because its URLs are unreliable. Having a single URL makes it easy to make a habit of meeting in the same "place." Think of it like a conference call extension or even like a physical meeting room.</p>
 
             <p>This service creates a permalink for a Hangout - a single URL with a Join Hangout button that take anyone who clicks it to the same hangout. As an added bonus, you can see whether other people are already in the hangout before you join it.</p>
         </article>
         <footer>
-            <p>This service is part of the Unhangout Project from the MIT Media Lab and MacArthur Foundation. Source available at <a href="http://github.com/drewww/unhangout">Github.</a></p>
+            <h1><center>© October 2013 - Present by Morgan Conrad. All rights reserved.</center>
+            </h1>
         </footer>
     </body>
 </html>
