Updated portfolio and contact.

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,10 +19,15 @@
         </header>
         <article>
             <h1>Work Portfolio</h1>
-            <h2>Make Hangouts into easily-reusable online meeting rooms.</h2>
-            <p>Google Hangouts are great, but it can be tricky to figure out how to create a hangout and send a link around to people. There are some work arounds (this trick with Google Calendar is particularly useful) but at the end of the day, Hangout just doesn't behave like a first class citizen of the web because its URLs are unreliable. Having a single URL makes it easy to make a habit of meeting in the same "place." Think of it like a conference call extension or even like a physical meeting room.</p>
-
-            <p>This service creates a permalink for a Hangout - a single URL with a Join Hangout button that take anyone who clicks it to the same hangout. As an added bonus, you can see whether other people are already in the hangout before you join it.</p>
+            <h2>Here are a few of my latest projects I have completed.</h2>
+            <p>This is a <a href="https://www.morganconrad.wordpress.com" target="_blank">wordpress blog</a> that I began writing for my Communication on the Internet class (MMC3260). <br> Topics I discussed included current studies and research on social media practices and how the entertainment industry and/or business world is using social media to their advantage.
+            </p>
+            <p>This is a <a href="https://www.ohwellyouknow.wordpress.com" target="_blank">wordpress blog</a> that I began writing for my Global Communications class (MMC4302). <br>
+Topics I discussed included sports, war and conflict, entertainment, etc. Blogging for that class was to help students learn about international issues, and to evaluate how media may affect its audience.
+            </p>
+            <p>This is a <a href="ppt/tmobile.pptx">deck</a> I helped to create at my internship at the public relations company PMK*BNC in Los Angeles, California in the summer of 2013. <br>
+During the internship we were assigned to small groups to create a mock presentation public relations/ marketing plan for one of the company's clients: T-Mobile. My small group, we named InTurn PR, successfully worked together to create a bold strategy for the future of T-Mobile. This included two events, one promotional stunt, 
+            </p>
         </article>
        <footer>
             <h1><center>© October 2013 - Present by Morgan Conrad. All rights reserved.</center>
