--- a/contact.html
+++ b/contact.html
@@ -19,13 +19,20 @@
         </header>
         <article>
             <h1>Contact Information</h1>
-            <h2>Make Hangouts into easily-reusable online meeting rooms.</h2>
-            <p>
-            </p>
+            <h2>Directly <a href="mailto:morganconrad2012@aol.com">                   Email Me</a></h2>
+            <h2>Social Media</h2>
+                <p><a href="https://www.facebook.com/morgan.conrad" target="_blank" title="Facebook">Facebook</a>
+                    <br>
+                <a href="https://twitter.com/morganconrad" target="_blank" title="Twitter">Twitter</a>
+                    <br>
+                <a href="http://www.linkedin.com/in/morganrconrad" target="_blank" title="LinkedIn">LinkedIn</a>
+                    <br>
+                </p>
         </article>
         <footer>
             <h1><center>© October 2013 - Present by Morgan Conrad. All rights reserved.</center>
             </h1>
         </footer>
-    </body>
+        
+</body>        
 </html>
