--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,8 @@
             <p>This is a <a href="https://www.ohwellyouknow.wordpress.com" target="_blank">wordpress blog</a> that I began writing for my Global Communications class (MMC4302). <br>
 Topics I discussed included sports, war and conflict, entertainment, etc. Blogging for that class was to help students learn about international issues, and to evaluate how media may affect its audience.
             </p>
-            <p>This is a <a href="ppt/tmobile.pptx">deck</a> I helped to create at my internship at the public relations company PMK*BNC in Los Angeles, California in the summer of 2013. <br>
-During the internship we were assigned to small groups to create a mock presentation public relations/ marketing plan for one of the company's clients: T-Mobile. My small group, we named InTurn PR, successfully worked together to create a bold strategy for the future of T-Mobile. This included two events, one promotional stunt, 
+            <p>This is a <a href="ppt/tmobile.pptx">deck</a> I helped to create at my internship at the public relations company PMK*BNC in Los Angeles, California in the Summer of 2013. <br>
+During my internship I was assigned to small groups of other interns to create a mock presentation of a public relations/marketing plan for one of the company's clients: T-Mobile. My small group, named InTurn PR, successfully worked together to create a bold strategy for the future of T-Mobile. This included two events, one promotional stunt, ... 
             </p>
         </article>
        <footer>
