Update to website.

--- a/resume.html
+++ b/resume.html
@@ -18,11 +18,40 @@
             </nav>
         </header>
         <article>
-            <h1>Professional Resume</h1>
-            <h2>Make Hangouts into easily-reusable online meeting rooms.</h2>
-            <p>Google Hangouts are great, but it can be tricky to figure out how to create a hangout and send a link around to people. There are some work arounds (this trick with Google Calendar is particularly useful) but at the end of the day, Hangout just doesn't behave like a first class citizen of the web because its URLs are unreliable. Having a single URL makes it easy to make a habit of meeting in the same "place." Think of it like a conference call extension or even like a physical meeting room.</p>
+            <h1>Professional Resume</h1><br>
+                <h2>Work Experience</h2>
+                    <h3>Endzone Bar & Grill, Gainesville, FL</h3>
+                        <h4>September 2013 to Present</h4>
+                            <p>Customer service – ensuring that all customers receive the best care when dining at the restaurant.
+                    <h3>PMK*BNC Public Relations Internship, Los Angeles, CA</h3>
+                        <h4>May 2013 to August 2013</h4>
+                            <p>Learning from and participating in the work that goes into public and brand image in the Entertainment Industry.</p>
+                    <h3>Stephen C. O’Connell Center, Gainesville, FL</h3>	
+                        <h4>September 2012 to Present</h4>
+                            <p>Customer service – ensuring that all patrons have a memorable and enjoyable experience from the time they walk inside the doors of our building.<br>
+Security – informing patrons of all building policy and enforcing building policy to ensure a safe time.<br>
+As of March, I was promoted to become a Supervisor of Ushers, and I am now going through the Supervisor Training Program.</p>
+                <h2>Education</h2>
+                    <h3>University of Florida, Gainesville, FL
+                        <h4>2012 to Present</h4>
+                            <p>Degrees in Progress & Relevent Coursework:
+                                <li>BS Telecommunication Media and Society</li>
+                                <li>MS Management</li>
+                                <li>Writing for Electronic Media</li>
+                                <li>Principles of Public Relations</li>
+                                <li>Communication on the Internet</li>
+                                <li>Social Psychology </li></p>
 
-            <p>This service creates a permalink for a Hangout - a single URL with a Join Hangout button that take anyone who clicks it to the same hangout. As an added bonus, you can see whether other people are already in the hangout before you join it.</p>
+                    <h3>Fleming Island High School, Fleming Island, FL</h3>	
+                        <h4>2008 to 2012</h4>
+                            <p>Senior Year – Gold Rush Event Chairperson, Graduation Address, Top 10% Standing<br>
+Junior Year - Class President, Gold Rush Event Chair, Senior Prom Chair<br>
+Freshman Year - Homecoming Court, Jr. Varsity Volleyball</p>
+
+                <h2>Skills</h2>
+                    <p>I never back down from challenges. I possess a blend of hands on experience and proven expertise in social media (including Facebook, Twitter, and Tumblr), event management, and customer relations.</p>
+
+                    <h3>Here is a downloadable version of my <a href="resume/resume.docx">resume</a>.</h3>
         </article>
       <footer>
             <h1><center>© October 2013 - Present by Morgan Conrad. All rights reserved.</center>
