Update to website.

--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
             </nav>
         </header>
         <article>
-            <h1>Professional Resume</h1><br>
+            <h1>Professional Resume</h1>
                 <h2>Work Experience</h2>
                     <h3>Endzone Bar & Grill, Gainesville, FL</h3>
                         <h4>September 2013 to Present</h4>
