Update to website.

--- a/about.html
+++ b/about.html
@@ -19,10 +19,10 @@
         </header>
         <article>
             <h1>About Myself</h1>
-            <h2>Make Hangouts into easily-reusable online meeting rooms.</h2>
-            <p>Google Hangouts are great, but it can be tricky to figure out how to create a hangout and send a link around to people. There are some work arounds (this trick with Google Calendar is particularly useful) but at the end of the day, Hangout just doesn't behave like a first class citizen of the web because its URLs are unreliable. Having a single URL makes it easy to make a habit of meeting in the same "place." Think of it like a conference call extension or even like a physical meeting room.</p>
-
-            <p>This service creates a permalink for a Hangout - a single URL with a Join Hangout button that take anyone who clicks it to the same hangout. As an added bonus, you can see whether other people are already in the hangout before you join it.</p>
+            <img src="img/selfpicture.jpg" alt="Morgan Conrad" title="Morgan Rose Conrad" />
+            <h2>Student. </h2>
+            
+            <p>I am a 19 year old student at the University of Florida pursuing my BS in Telecommunications Media & Society. I am interested in digital communication, including the management of social media platforms for businesses and/or individuals. Since interning in Los Angeles in the Summer of 2013, I have become interested in the possibility of Entertainment/Talent Management. My goal in life is to.. </p>
         </article>
         <footer>
             <h1><center>© October 2013 - Present by Morgan Conrad. All rights reserved.</center>
