Update to website.

--- a/about.html
+++ b/about.html
@@ -19,10 +19,17 @@
         </header>
         <article>
             <h1>About Myself</h1>
-            <img src="img/selfpicture.jpg" alt="Morgan Conrad" title="Morgan Rose Conrad" />
-            <h2>Student. </h2>
-            
-            <p>I am a 19 year old student at the University of Florida pursuing my BS in Telecommunications Media & Society. I am interested in digital communication, including the management of social media platforms for businesses and/or individuals. Since interning in Los Angeles in the Summer of 2013, I have become interested in the possibility of Entertainment/Talent Management. My goal in life is to.. </p>
+            <p><img src="img/selfpicture.jpg" alt="Morgan Conrad" title="Morgan Rose Conrad" />My name is Morgan Conrad and I am a 19 year old student at the University of Florida pursuing my BS in Telecommunications Media & Society. I am interested in digital communication, including the management of social media platforms for businesses and/or individuals. Since interning in Los Angeles in the Summer of 2013, I have become interested in the possibility of Entertainment/Talent Management. </p>
+            <br> 
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <!--I don't know how to float the image left without it covering the footer, so I broke the body so that in full screen the image does not cover the footer. If you collapse the window it creates a lot of white space though.. -->
         </article>
         <footer>
             <h1><center>© October 2013 - Present by Morgan Conrad. All rights reserved.</center>
