--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             </nav>
         </header>
         <article>
-            <h1>Welcome</h1>
-            <h2>Make Hangouts into easily-reusable online meeting rooms.</h2>
-            <p>This service creates a permalink for a Hangout - a single URL with a Join Hangout button that take anyone who clicks it to the same hangout. As an added bonus, you can see whether other people are already in the hangout before you join it.</p>
+            <h1><center><img src="img/indexpic.jpg" alt="Morgan Conrad" title="Venice Beach Starry Night" /> <br>
+                Go confidently in the direction of your dreams. Live the life you have imagined. - Henry David Thoreau </center></h1>
+        
         </article>
         <footer>
             <h1><center>© October 2013 - Present by Morgan Conrad. All rights reserved.</center>
