Personal website part 1 submission.

--- a/resume.html
+++ b/resume.html
@@ -20,19 +20,19 @@
         <article>
             <h1>Professional Resume</h1>
                 <h2>Work Experience</h2>
-                    <h3>Endzone Bar & Grill, Gainesville, FL</h3>
+                    <h3><a href="http://endzonegainesville.com" target="_blank">Endzone Bar & Grill</a>, Gainesville, FL</h3>
                         <h4>September 2013 to Present</h4>
                             <p>Customer service – ensuring that all customers receive the best care when dining at the restaurant.
-                    <h3>PMK*BNC Public Relations Internship, Los Angeles, CA</h3>
+                    <h3><a href="http://www.pmkbnc.com" target="_blank">PMK*BNC</a> Public Relations Internship, Los Angeles, CA</h3>
                         <h4>May 2013 to August 2013</h4>
                             <p>Learning from and participating in the work that goes into public and brand image in the Entertainment Industry.</p>
-                    <h3>Stephen C. O’Connell Center, Gainesville, FL</h3>	
+                    <h3><a href="http://www.oconnellcenter.ufl.edu" target="_blank">Stephen C. O’Connell Center</a>, Gainesville, FL</h3>	
                         <h4>September 2012 to Present</h4>
                             <p>Customer service – ensuring that all patrons have a memorable and enjoyable experience from the time they walk inside the doors of our building.<br>
 Security – informing patrons of all building policy and enforcing building policy to ensure a safe time.<br>
 As of March, I was promoted to become a Supervisor of Ushers, and I am now going through the Supervisor Training Program.</p>
                 <h2>Education</h2>
-                    <h3>University of Florida, Gainesville, FL
+                    <h3>University of Florida, Gainesville, FL</h3>
                         <h4>2012 to Present</h4>
                             <p>Degrees in Progress & Relevent Coursework:
                                 <li>BS Telecommunication Media and Society</li>
