Final submission of personal website part 1.

--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
             </nav>
         </header>
         <article>
+            <div id="main">
             <h1>Contact Information</h1>
             <h2>Directly <a href="mailto:morganconrad2012@aol.com">                   Email Me</a></h2>
             <h2>Social Media</h2>
@@ -28,7 +29,7 @@
                 <a href="http://www.linkedin.com/in/morganrconrad" target="_blank" title="LinkedIn">LinkedIn</a>
                     <br>
                 </p>
-        </article>
+        </div></article>
         <footer>
             <h1><center>© October 2013 - Present by Morgan Conrad. All rights reserved.</center>
             </h1>
