--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
             </nav>
         </header>
         <article>
+            <div id="main">
             <h1><center><img src="img/indexpic.jpg" alt="Morgan Conrad" title="Venice Beach Starry Night" /> <br>
                 Go confidently in the direction of your dreams. Live the life you have imagined. - Henry David Thoreau </center></h1>
         
-        </article>
+        </div></article>
         <footer>
             <h1><center>© October 2013 - Present by Morgan Conrad. All rights reserved.</center>
             </h1>
