--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
             </nav>
         </header>
         <article>
+            <div id="main">
             <h1>About Myself</h1>
             <p><img src="img/selfpicture.jpg" alt="Morgan Conrad" title="Morgan Rose Conrad" />My name is Morgan Conrad and I am a 19 year old student at the University of Florida pursuing my BS in Telecommunications Media & Society. I am interested in digital communication, including the management of social media platforms for businesses and/or individuals. Since interning in Los Angeles in the Summer of 2013, I have become interested in the possibility of Entertainment/Talent Management. </p>
             <br> 
@@ -30,7 +31,7 @@
             <br>
             <br>
             <!--I don't know how to float the image left without it covering the footer, so I broke the body so that in full screen the image does not cover the footer. If you collapse the window it creates a lot of white space though.. -->
-        </article>
+        </div></article>
         <footer>
             <h1><center>© October 2013 - Present by Morgan Conrad. All rights reserved.</center>
             </h1>
