--- a/portfolio.html
+++ b/portfolio.html
@@ -18,20 +18,22 @@
             </nav>
         </header>
         <article>
+            <div id="main">
             <h1>Work Portfolio</h1>
             <h2>Here are a few of my latest projects I have completed.</h2>
-            <p>This is a <a href="https://www.morganconrad.wordpress.com" target="_blank">wordpress blog</a> that I began writing for my Communication on the Internet class (MMC3260). <br> Topics I discussed included current studies and research on social media practices and how the entertainment industry and/or business world is using social media to their advantage.
+            <p>This is a <a href="https://morganconrad.wordpress.com" target="_blank">wordpress blog</a> that I began writing for my Communication on the Internet class (MMC3260). <br> Topics I discussed included current studies and research on social media practices and how the entertainment industry and/or business world is using social media to their advantage.
             </p>
-            <p>This is a <a href="https://www.ohwellyouknow.wordpress.com" target="_blank">wordpress blog</a> that I began writing for my Global Communications class (MMC4302). <br>
+            <p>This is a <a href="https://ohwellyouknow.wordpress.com" target="_blank">wordpress blog</a> that I began writing for my Global Communications class (MMC4302). <br>
 Topics I discussed included sports, war and conflict, entertainment, etc. Blogging for that class was to help students learn about international issues, and to evaluate how media may affect its audience.
             </p>
             <p>This is a <a href="ppt/tmobile.pptx">deck</a> I helped to create while interning at the public relations company PMK*BNC in Los Angeles, California in the Summer of 2013. <br>
 During my internship, I was assigned to small group of other interns to create a mock presentation of a public relations/marketing plan for one of the company's clients: T-Mobile. My small group, named InTurn PR, successfully worked together to create a bold strategy for the future of T-Mobile. At the end of the internship we pitched our mock presentation to an audience that included the two CEOs of the company, and other professionals in the office. 
             </p>
+            </div> 
         </article>
        <footer>
             <h1><center>© October 2013 - Present by Morgan Conrad. All rights reserved.</center>
             </h1>
-        </footer>
+        </footer>   
     </body>
 </html>
