--- a/resume.html
+++ b/resume.html
@@ -18,6 +18,7 @@
             </nav>
         </header>
         <article>
+            <div id="main">
             <h1>Professional Resume</h1>
                 <h2>Work Experience</h2>
                     <h3><a href="http://endzonegainesville.com" target="_blank">Endzone Bar & Grill</a>, Gainesville, FL</h3>
@@ -52,7 +53,7 @@ Freshman Year - Homecoming Court, Jr. Varsity Volleyball</p>
                     <p>I never back down from challenges. I possess a blend of hands on experience and proven expertise in social media (including Facebook, Twitter, and Tumblr), event management, and customer relations.</p>
 
                     <h3>Here is a downloadable version of my <a href="resume/resume.docx">resume</a>.</h3>
-        </article>
+        </div></article>
       <footer>
             <h1><center>© October 2013 - Present by Morgan Conrad. All rights reserved.</center>
             </h1>
