FINAL submission of personal website part 1.

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         </header>
         <article>
             <div id="main">
-            <h1>About Myself</h1>
+            <h1><center>About Myself</center></h1>
             <p><img src="img/selfpicture.jpg" alt="Morgan Conrad" title="Morgan Rose Conrad" />My name is Morgan Conrad and I am a 19 year old student at the University of Florida pursuing my BS in Telecommunications Media & Society. I am interested in digital communication, including the management of social media platforms for businesses and/or individuals. Since interning in Los Angeles in the Summer of 2013, I have become interested in the possibility of Entertainment/Talent Management. </p>
             <br> 
             <br>
