--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         </header>
         <article>
             <div id="main">
-            <h1>Work Portfolio</h1>
+            <h1><center>Work Portfolio</center></h1>
             <h2>Here are a few of my latest projects I have completed.</h2>
             <p>This is a <a href="https://morganconrad.wordpress.com" target="_blank">wordpress blog</a> that I began writing for my Communication on the Internet class (MMC3260). <br> Topics I discussed included current studies and research on social media practices and how the entertainment industry and/or business world is using social media to their advantage.
             </p>
