--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
         </header>
         <article>
             <div id="main">
-            <h1>Professional Resume</h1>
+            <h1><center>Professional Resume</center></h1>
                 <h2>Work Experience</h2>
                     <h3><a href="http://endzonegainesville.com" target="_blank">Endzone Bar & Grill</a>, Gainesville, FL</h3>
                         <h4>September 2013 to Present</h4>
