FINAL FINAL personal website part 1 submission.

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         </header>
         <article>
             <div id="main">
-            <h1><center><img src="img/indexpic.jpg" alt="Morgan Conrad" title="Venice Beach Starry Night" /> <br>
-                Go confidently in the direction of your dreams. Live the life you have imagined. - Henry David Thoreau </center></h1>
+            <h1><img src="img/indexpic.jpg" alt="Morgan Conrad" title="Venice Beach Starry Night" /> <br>
+                Go confidently in the direction of your dreams. Live the life you have imagined. - Henry David Thoreau</h1>
         
         </div></article>
         <footer>
-            <h1><center>© October 2013 - Present by Morgan Conrad. All rights reserved.</center>
+            <h1>© October 2013 - Present by Morgan Conrad. All rights reserved.
             </h1>
         </footer>
     </body>
