--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
         </header>
         <article>
             <div id="main">
-            <h1><center>Professional Resume</center></h1>
+            <h1>Professional Resume</h1>
                 <h2>Work Experience</h2>
                     <h3><a href="http://endzonegainesville.com" target="_blank">Endzone Bar & Grill</a>, Gainesville, FL</h3>
                         <h4>September 2013 to Present</h4>
@@ -35,14 +35,15 @@ As of March, I was promoted to become a Supervisor of Ushers, and I am now going
                 <h2>Education</h2>
                     <h3>University of Florida, Gainesville, FL</h3>
                         <h4>2012 to Present</h4>
-                            <p>Degrees in Progress & Relevent Coursework:
+                            <p>Degrees in Progress & Relevent Coursework:</p>
+                                <ul>
                                 <li>BS Telecommunication Media and Society</li>
                                 <li>MS Management</li>
                                 <li>Writing for Electronic Media</li>
                                 <li>Principles of Public Relations</li>
                                 <li>Communication on the Internet</li>
-                                <li>Social Psychology </li></p>
-
+                                <li>Social Psychology</li>
+                                </ul><br>
                     <h3>Fleming Island High School, Fleming Island, FL</h3>	
                         <h4>2008 to 2012</h4>
                             <p>Senior Year – Gold Rush Event Chairperson, Graduation Address, Top 10% Standing<br>
@@ -55,7 +56,7 @@ Freshman Year - Homecoming Court, Jr. Varsity Volleyball</p>
                     <h3>Here is a downloadable version of my <a href="resume/resume.docx">resume</a>.</h3>
         </div></article>
       <footer>
-            <h1><center>© October 2013 - Present by Morgan Conrad. All rights reserved.</center>
+            <h1>© October 2013 - Present by Morgan Conrad. All rights reserved.
             </h1>
         </footer>
     </body>
