--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
                 <a href="contact.html">Contact</a>
             </nav>
         </header>
-        <article><center>
+        <article>
             <div id="main">
             <h1>Contact Information</h1>
             <h2>Directly <a href="mailto:morganconrad2012@aol.com">                   Email Me</a></h2>
@@ -29,9 +29,9 @@
                 <a href="http://www.linkedin.com/in/morganrconrad" target="_blank" title="LinkedIn">LinkedIn</a>
                     <br>
                 </p>
-        </div></center></article>
+        </div></article>
         <footer>
-            <h1><center>© October 2013 - Present by Morgan Conrad. All rights reserved.</center>
+            <h1>© October 2013 - Present by Morgan Conrad. All rights reserved.
             </h1>
         </footer>
         
