--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         </header>
         <article>
             <div id="main">
-            <h1><center>Work Portfolio</center></h1>
+            <h1>Work Portfolio</h1>
             <h2>Here are a few of my latest projects I have completed.</h2>
             <p>This is a <a href="https://morganconrad.wordpress.com" target="_blank">wordpress blog</a> that I began writing for my Communication on the Internet class (MMC3260). <br> Topics I discussed included current studies and research on social media practices and how the entertainment industry and/or business world is using social media to their advantage.
             </p>
@@ -32,7 +32,7 @@ During my internship, I was assigned to small group of other interns to create a
             </div> 
         </article>
        <footer>
-            <h1><center>© October 2013 - Present by Morgan Conrad. All rights reserved.</center>
+            <h1>© October 2013 - Present by Morgan Conrad. All rights reserved.
             </h1>
         </footer>   
     </body>
