--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,8 @@
                 <a href="about.html">About</a>
                 <a href="resume.html">Resume</a>
                 <a href="portfolio.html">Portfolio</a>
+                <a href="photos.html">Photos</a>
+                <a href="videos.html">Videos</a>
                 <a href="contact.html">Contact</a>
             </nav>
         </header>
