--- a/portfolio.html
+++ b/portfolio.html
@@ -14,8 +14,6 @@
                 <a href="about.html">About</a>
                 <a href="resume.html">Resume</a>
                 <a href="portfolio.html">Portfolio</a>
-                <a href="photos.html">Photos</a>
-                <a href="videos.html">Videos</a>
                 <a href="contact.html">Contact</a>
             </nav>
         </header>
@@ -23,6 +21,7 @@
             <div id="main">
             <h1>Work Portfolio</h1>
             <h2>Here are a few of my latest projects I have completed.</h2>
+            <p> This is an <a href="http://vimeo.com/80844850">interview</a> I conducted with Jeff Conrad on the business of Proposal Consulting, how social media has changed business, and the future of social media. <br> <iframe src="//player.vimeo.com/video/80844850" width="500" height="560" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></p>
             <p>This is a <a href="https://morganconrad.wordpress.com" target="_blank">wordpress blog</a> that I began writing for my Communication on the Internet class (MMC3260). <br> Topics I discussed included current studies and research on social media practices and how the entertainment industry and/or business world is using social media to their advantage.
             </p>
             <p>This is a <a href="https://ohwellyouknow.wordpress.com" target="_blank">wordpress blog</a> that I began writing for my Global Communications class (MMC4302). <br>
