--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,7 @@
     <head>
         <title>Morgan Rose Conrad</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="initial-scale=1.0, width=device-width" /> 
         <link rel="stylesheet" href="css/base.css" />
     </head>
     <body>
