Update to widgets.

--- a/contact.html
+++ b/contact.html
@@ -23,13 +23,11 @@
             <h1>Contact Information</h1>
             <h2>Directly <a href="mailto:morganconrad2012@aol.com">                   Email Me</a></h2>
             <h2>Social Media</h2>
-                <p><a href="https://www.facebook.com/morgan.conrad" target="_blank" title="Facebook">Facebook</a>
+                <h5><a href="https://www.facebook.com/morgan.conrad" target="_blank" title="Facebook"><img src="img/facebookwidget.jpg" alt="Facebook" title="Facebook" /></a>
+                <a href="https://twitter.com/morganconrad" target="_blank" title="Twitter"><img src="img/twitterwidget.jpg" alt="Facebook" title="Facebook" /></a>
+                <a href="http://www.linkedin.com/in/morganrconrad" target="_blank" title="LinkedIn"><img src="img/linkedinwidget.jpg" alt="Facebook" title="Facebook" /></a>
                     <br>
-                <a href="https://twitter.com/morganconrad" target="_blank" title="Twitter">Twitter</a>
-                    <br>
-                <a href="http://www.linkedin.com/in/morganrconrad" target="_blank" title="LinkedIn">LinkedIn</a>
-                    <br>
-                </p>
+                </h5>
         </div></article>
         <footer>
             <h1>© October 2013 - Present by Morgan Conrad. All rights reserved.
