Update to website.

--- a/contact.html
+++ b/contact.html
@@ -21,13 +21,14 @@
         <article>
             <div id="main">
             <h1>Contact Information</h1>
+                <img src="img/contactme.jpg" alt="Morgan Conrad" title="Morgan Rose Conrad" class="center" />
             <h2>Directly <a href="mailto:morganconrad2012@aol.com">                   Email Me</a></h2>
             <h2>Social Media</h2>
-                <h5><a href="https://www.facebook.com/morgan.conrad" target="_blank" title="Facebook"><img src="img/facebookwidget.jpg" alt="Facebook" title="Facebook" /></a>
-                <a href="https://twitter.com/morganconrad" target="_blank" title="Twitter"><img src="img/twitterwidget.jpg" alt="Facebook" title="Facebook" /></a>
-                <a href="http://www.linkedin.com/in/morganrconrad" target="_blank" title="LinkedIn"><img src="img/linkedinwidget.jpg" alt="Facebook" title="Facebook" /></a>
+                <p><a href="https://www.facebook.com/morgan.conrad" target="_blank" title="Facebook"><img src="img/facebookwidget.jpg" alt="Facebook" title="Facebook" class="center" /></a>
+                <a href="https://twitter.com/morganconrad" target="_blank" title="Twitter"><img src="img/twitterwidget.jpg" alt="Twitter" title="Twitter" class="center" /></a>
+                <a href="http://www.linkedin.com/in/morganrconrad" target="_blank" title="LinkedIn"><img src="img/linkedinwidget.jpg" alt="LinkedIn" title="LinkedIn" class="center" /></a>
                     <br>
-                </h5>
+                </p>
         </div></article>
         <footer>
             <h1>© October 2013 - Present by Morgan Conrad. All rights reserved.
