--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Morgan Rose Conrad</title>
+        <title>About Morgan Conrad</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="initial-scale=1.0, width=device-width" /> 
         <link rel="stylesheet" href="css/base.css" />
