--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         <article>
             <div id="main">
             <h1>About Myself</h1>
-            <p><img src="img/selfpicture.jpg" alt="Morgan Conrad" title="Morgan Rose Conrad" />My name is Morgan Conrad and I am a 19 year old student at the University of Florida pursuing my BS in Telecommunications Media & Society with a minor in Business. I am interested in digital communication, including the management of social media platforms for businesses and/or individuals. Since interning in Los Angeles in the Summer of 2013, I have become interested in the possibility of Entertainment/Talent Management. </p>
+            <p><img src="img/selfpicture.jpg" alt="Morgan Conrad" title="Morgan Rose Conrad" />My name is Morgan Conrad and I am a 20 year old student at the University of Florida pursuing my BS in Telecommunications Media & Society with a minor in Business Administration. I am interested in digital communication and promotion, including the management of social media platforms for businesses and/or individuals. Since interning in Los Angeles in the Summer of 2013, I have become interested in the possibility of Entertainment/Talent Management. </p>
         </div></article>
         <footer>
             <h1>© October 2013 - Present by Morgan Conrad. All rights reserved.
