--- a/resume.html
+++ b/resume.html
@@ -54,7 +54,7 @@ Freshman Year - Homecoming Court, Jr. Varsity Volleyball</p>
                 <h2>Skills</h2>
                     <p>I never back down from challenges. I possess a blend of hands on experience and proven expertise in social media (including Facebook, Twitter, and Tumblr), event management, and customer relations.</p>
 
-                    <h3>Here is a downloadable version of my <a href="resume/resume.docx">resume</a>.</h3>
+                    <h3>Here is a downloadable version of my <a href="resume/resumemc.docx">resume</a>.</h3>
         </div></article>
       <footer>
             <h1>© October 2013 - Present by Morgan Conrad. All rights reserved.
